# pclean

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ruff.yml  test.yml
docs/: adios2_convert.md  benchmark_zfs_pools.md  briggsbwtaper.md  casa_channel_build.md  check_adios2.md  code_structure.md  conf.py  config_current.md  dev_guide.md  image_concatenation.md  index.md  make.bat  memory_estimation.md  memory_management.md  parallelization.md  per_channel_convergence.md  slurm_submit_guide.md  update_defaults.md  why_adios2.md
docs/_static/: custom.css  zoom.js
docs/api/: config.md  imaging.md  parallel.md  params.md  pclean.md  utils.md
docs/reports/: alma_pclean_perf_v1.md  alma_pclean_vs_tclean_v1.md  alma_tclean_perf_v1.md  tclean_pclean_perf_v2.md
scripts/: gen_defaults_yaml.py  test_alma_hltau_60k_pclean_v1.md  test_alma_hltau_60k_pclean_v1.yaml  test_alma_pclean_v2.py  test_alma_pclean_v4.yaml  test_alma_small_mosaic_pclean_amp_v2.py  test_alma_small_mosaic_pclean_v2.py  test_alma_small_mosaic_tclean_v2.py  test_alma_tclean_v4.py
src/pclean/: __init__.py  __main__.py  _cli_parser.py  config.py  params.py  pclean.py
src/pclean/configs/: adios2_config.xml  defaults.yaml
src/pclean/configs/presets/: vlass.yaml
src/pclean/imaging/: __init__.py  automask.py  deconvolver.py  normalizer.py  serial_imager.py
src/pclean/parallel/: __init__.py  cluster.py  continuum_parallel.py  cube_parallel.py  submit.py  worker_tasks.py
src/pclean/utils/: __init__.py  check_adios2.py  convert_adios2.py  image_concat.py  memory_estimate.py  partition.py
tests/: __init__.py  conftest.py  test_automask.py  test_cli.py  test_cli_defaults.py  test_image_concat.py  test_imager.py  test_integration.py  test_memory_estimate.py  test_params.py  test_submit.py  test_vlass_mtmfs.py
