[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pclean"
version = "0.1.0"
description = "Parallel CLEAN imaging using Dask and CASA tools"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license-files = ["LICENSE"]
requires-python = ">= 3.10"
dependencies = [
    "casatools>=6.5",
    "dask[distributed]",
    "numpy",
]
keywords = ["astronomy", "pipeline", "ALMA", "VLA", "radio-astronomy"]
authors = [
    {name = "MiCASA", email = "rx.astro@gmail.com"},
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Pixi configuration
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pclean = { path = ".", editable = true }

[tool.pixi.system-requirements]
macos = "15.0"

[tool.pixi.dependencies]
# Pinning to a specific minor version ensures environment stability
python = "3.12.*" 
conda-ecosystem-user-package-isolation = "*"
ipython = "*"
pip = ">=23.0"

# Use tilde or caret requirements to allow bugfixes but prevent breaking changes
numpy = "~=2.2.0"  # Utilizing NumPy 2.x performance improvements
dask = ">=2025.12.0" 
distributed = ">=2025.12.0"
dask-jobqueue = ">=0.9.0" # Highly recommended if running on HPC clusters

[tool.pixi.feature.casa.pypi-dependencies]
casatools = "*"
casatasks = "*"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7"
pytest-cov = ">=4"

[tool.pixi.feature.dev.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=pclean --cov-report=term-missing"
lint = "python -m py_compile src/pclean/pclean.py"

[tool.pixi.environments]
default = { features = ["casa"], solve-group = "default" }
dev = { features = ["casa", "dev"], solve-group = "default" }
test = { features = ["dev"], solve-group = "default" }
