[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pclean"
version = "0.1.0"
description = "Parallel CLEAN imaging using Dask and CASA tools"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license-files = ["LICENSE"]
requires-python = ">= 3.10"
dependencies = [
    "casatools>=6.5",
    "dask",
    "distributed",
    "numpy",
]
keywords = ["astronomy", "pipeline", "ALMA", "VLA", "radio-astronomy"]
authors = [
    {name = "MiCASA", email = "rx.astro@gmail.com"},
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9", # pycodestyle errors
    "F",  # pyflakes
    "D",  # pydocstyle
    "I",  # isort
]
preview = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 140
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
exclude = ["*.pyi"]
docstring-code-format = true
docstring-code-line-length = 140
quote-style = "single"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------

[tool.coverage.run]
omit = ['tests/*']
branch = true             # Same as --cov-branch
source = ['pclean']       # Same as --cov=pipeline

[tool.coverage.report]
fail_under = 60 # Set the minimum coverage percentage required
precision = 2 # Add decimal precision
show_missing = true
skip_covered = false
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'if __name__ == "__main__":',

    'raise NotImplementedError',
    'pass',
    '@(abc\\.)?abstractmethod',
]

# ---------------------------------------------------------------------------
# Pixi configuration
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pclean = { path = ".", editable = true }

[tool.pixi.system-requirements]
macos = "15.0"

[tool.pixi.dependencies]
# Pinning to a specific minor version ensures environment stability
python = "3.12.*" 
conda-ecosystem-user-package-isolation = "*"
ipython = "*"
pip = ">=23.0"

# Use tilde or caret requirements to allow bugfixes but prevent breaking changes
numpy = "~=2.2.0"  # Utilizing NumPy 2.x performance improvements
dask = ">=2025.12.0" 
distributed = ">=2025.12.0"
dask-jobqueue = ">=0.9.0" # Highly recommended if running on HPC clusters

[tool.pixi.feature.casa.pypi-dependencies]
casatools = "*"
casatasks = "*"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7"
pytest-cov = ">=4"

[tool.pixi.feature.dev.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=pclean --cov-report=term-missing"
lint = "python -m py_compile src/pclean/pclean.py"

[tool.pixi.environments]
default = { features = ["casa"], solve-group = "default" }
dev = { features = ["casa", "dev"], solve-group = "default" }
test = { features = ["dev"], solve-group = "default" }
