[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casa-pclean"
dynamic = ["version"]
description = "Parallel CLEAN imaging using Dask and CASA tools"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
license-files = ["LICENSE"]
requires-python = ">= 3.10"
dependencies = ["dask", "distributed", "numpy", "pydantic>=2.0", "pyyaml>=6.0"]
keywords = [
    "astronomy",
    "pipeline",
    "ALMA",
    "VLA",
    "radio-astronomy",
    "CASA",
    "imaging",
]
authors = [{ name = "MiCASA", email = "rx.astro@gmail.com" }]

[project.urls]
Homepage = "https://github.com/r-xue/pclean"
Repository = "https://github.com/r-xue/pclean"
Issues = "https://github.com/r-xue/pclean/issues"
Documentation = "https://pclean.readthedocs.io/"
Changelog = "https://github.com/r-xue/pclean/releases"

[project.scripts]
pclean = "pclean.__main__:main"

[project.optional-dependencies]
casa = ["casatools>=6.5"]
dev = ["pytest", "pytest-cov"]
slurm = ["dask-jobqueue>=0.8"]
docs = ["sphinx>=7.0", "furo", "myst-parser>=2.0", "sphinx-copybutton"]

[tool.setuptools_scm]
root = "."
version_file = "src/pclean/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pclean = ["configs/**/*.yaml", "py.typed"]

# ---------------------------------------------------------------------------
# Ruff configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E4", # pycodestyle imports — flags bad import grouping (e.g., multiple imports on one line)
    "E7", # pycodestyle statements — flags bad syntax patterns (e.g., `== None` instead of `is None`)
    "E9", # pycodestyle runtime errors — flags severe syntax and indentation errors
    "W",  # pycodestyle warnings (trailing whitespace, etc.)
    "F",  # pyflakes
    "D",  # pydocstyle
    "I",  # isort
]
ignore = [
    "D102", # Missing docstring in public method
    "D107", # Missing docstring in __init__
    "D105", # Missing docstring in magic method
]
preview = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 140
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
exclude = ["*.pyi"]
docstring-code-format = true
docstring-code-line-length = 140
quote-style = "single"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------

[tool.coverage.run]
omit = ['tests/*']
branch = true       # Same as --cov-branch
source = ['pclean'] # Same as --cov=pipeline

[tool.coverage.report]
fail_under = 60 # Set the minimum coverage percentage required
precision = 2 # Add decimal precision
show_missing = true
skip_covered = false
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'if __name__ == "__main__":',

    'raise NotImplementedError',
    'pass',
    '@(abc\\.)?abstractmethod',
]

# ---------------------------------------------------------------------------
# Pixi configuration
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
# Allow mixing packages from the rx channel and conda-forge
channel-priority = "disabled"
# rx channel builds with fracbw/cubegridding parameter exposed for testing
channels = ["https://conda.anaconda.org/rxue", "conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
casa-pclean = { path = ".", editable = true }

[tool.pixi.system-requirements]
macos = "15.0"

[tool.pixi.dependencies]
# Pinning to a specific minor version ensures environment stability
python = "3.12.*"
conda-ecosystem-user-package-isolation = "*"
ipython = "*"
pip = ">=23.0"

# Use tilde or caret requirements to allow bugfixes but prevent breaking changes
numpy = "~=2.2.0"           # Utilizing NumPy 2.x performance improvements
dask = ">=2025.12.0"
distributed = ">=2025.12.0"
dask-jobqueue = ">=0.9.0"   # Recommended if running on HPC clusters

[tool.pixi.feature.casa-pypi.pypi-dependencies]
casatools = "*"
casatasks = "*"

[tool.pixi.feature.casa-forge.dependencies]
casatools = "*"
casatasks = "*"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7"
pytest-cov = ">=4"
ruff = ">=0.11"

[tool.pixi.feature.docs.pypi-dependencies]
sphinx = ">=7.0"
furo = "*"
myst-parser = ">=2.0"
sphinx-copybutton = "*"

[tool.pixi.feature.dev.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=pclean --cov-report=term-missing"
lint = "ruff check src tests"
fmt = "ruff format src tests"
fmt-check = "ruff format src tests --check"
gen-defaults = "python scripts/gen_defaults_yaml.py"

[tool.pixi.feature.docs.tasks]
docs-html = "sphinx-build -b html docs docs/_build/html"
docs-clean = "rm -rf docs/_build"

[tool.pixi.environments]
default = { features = ["casa-pypi"], solve-group = "default" }
forge = { features = ["casa-forge"], solve-group = "forge" }
dev = { features = ["casa-pypi", "dev"], solve-group = "default" }
test = { features = ["casa-pypi", "dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
